gccida/c3/anti_adjust_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/anti_adjust_stack/src/explow.c:1357:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/anti_adjust_stack/src/obj/explow.o] Error 1
